<resources>
    <string name="app_name">Mi Recarga Vendedor</string>
    <string name="titulo_principal">Mi Recarga Vendedor</string>
    <string name="empty"> </string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <string name="action_settings">Impresora</string>

    <string name="vendedor_home_texto_hello">Hola</string>
    <string name="navigation_inicio">Inicio</string>
    <string name="navigation_salir">Cerrar sesión</string>
    <string name="action_right_drawer">Right Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="vender">Vender</string>
    <string name="n_mero_de_celular_a_recargar">Número de celular a recargar</string>
    <string name="valor_a_recargar">Valor a recargar</string>
    <string name="seleccione_operador">Seleccione un operador…</string>
    <string name="tu_saldo">Tu saldo: %s</string>
    <string name="operacion_cancelada">Operación cancelada</string>
    <string name="ingreso_no_autorizado">No se ha autorizado el ingreso</string>
    <string name="operador">Operador</string>
    <string name="cancelar">Cancelar</string>
    <string name="anonimo">Anónimo</string>
    <string name="placa">Placa</string>
    <string name="seleccione_zona">Seleccione una zona…</string>
    <string name="seleccione_metodo_pago">Seleccione un método de pago…</string>
    <string name="seleccione_paquete">Seleccione un paquete…</string>
    <string name="seleccione_tarifa">Seleccione la tarifa…</string>
    <string name="cliente">Cliente</string>
    <string name="zona">Zona</string>
    <string name="metodo_de_pago">Método de pago</string>
    <string name="paquete">Paquete</string>
    <string name="msg_recarga_en_linea_saldo_insuficiente">No tiene saldo suficiente para realizar esta venta</string>
    <string name="msg_recarga_en_linea_exitoso">La recarga para el numero %s se ha generado satisfactoriamente</string>
    <string name="msg_recarga_en_linea_auditoria">Se realizó la recarga para el numero %s del operador %s por un valor de %s</string>
    <string name="fecha_content_descripction">Seleccionar fecha</string>
    <string name="buscar_content_descripction">Buscar</string>
    <string name="seleccione_cliente">Seleccione el cliente…</string>

    <string name="impresora_local">Impresora local</string>
    <string name="impresora_bluetooth">Impresora Bluetooth</string>
    <string name="impresora_zebra">Impresora Zebra</string>
    <string name="bluetooth_mac_address">Bluetooth MAC Address</string>
    <string name="guardar">Guardar</string>
    <string name="msg_mac_impresora_exitoso">La dirección MAC se ha actualizado exitosamente</string>
    <string name="msg_nombre_impresora_exitoso">El nombre se ha actualizado exitosamente</string>

    <string name="titulo_configuracion_impresora">Configuración Impresora</string>
    <string name="pin_nombre_producto">Nombre producto: %s</string>
    <string name="pin_saldo_balance">Saldo balance: %s</string>
    <string name="pin_estado">Estado: %s</string>
    <string name="pin_fecha_creacion">Fecha creación: %s</string>
    <string name="pin_establecimiento">Establecimiento: %s</string>
    <string name="ver_detalle_titulo">Detalle</string>
    <string name="label_pin">Pin No:</string>
    <string name="label_fecha_inicio">Fecha inicio:</string>
    <string name="label_fecha_fin">Fecha Fin:</string>
    <string name="label_saldo">Saldo:</string>
    <string name="imprimir">Imprimir</string>
    <string name="msg_configurar_impresora">Por favor configure impresora</string>
    <string name="volver_al_inicio">Inicio</string>
    <string name="realizar_otra_venta">Otra venta</string>
    <string name="msg_venta_paquete_saldo_insuficiente">No tiene saldo suficiente para realizar esta venta</string>
    <string name="msg_venta_paquete_exitoso">El PIN para la placa %s se ha generado satisfactoriamente</string>
    <string name="msg_venta_paquete_auditoria">Se realizó el pago del parqueadero de la zona %s del %s para la placa %s por un valor de %s</string>
    <string name="msg_venta_pin_exitoso">El PIN se ha generado satisfactoriamente</string>
    <string name="msg_venta_pin_auditoria">Se realizó el pago del PIN para el cliente %s con el paquete %s</string>
    <string name="titulo_busqueda">Resultados de la búsqueda</string>
    <string name="celda_ocupada_hora_inicio">Hora inicio: %s</string>
    <string name="celda_ocupada_hora_vencimiento">Hora vencimiento: %s</string>
    <string name="celda_ocupada_cliente">Cliente: %s</string>
    <string name="celda_ocupada_tiempo_vencerese">Tiempo para vencerse: %s</string>

    <string name="seleccione_departamento">Seleccione un departamento…</string>
    <string name="seleccione_municipio">Seleccione un municipio…</string>
    <string name="celda_ocupada_celda">Celda %s</string>
    <string name="celda_ocupada_placa">Placa: %s</string>
    <string name="salida_de_vehiculo">Salida de vehículo</string>
    <string name="seleccione_tipo_vehiculo">Seleccione un tipo de vehículo…</string>
    <string name="probar_impresora">Probar Impresora</string>
    <string name="historial">Historial</string>
    <string name="filtrar">Filtrar</string>
    <string name="todos_estados">Todos los estados</string>
    <string name="todos_tipos_celda">Todos los tipos de celda</string>
    <string name="opciones_de_mapa">Opciones de Mapa</string>
    <string name="seleccione_tarjeta_prepago">Seleccione la Tarjeta…</string>
    <string name="tarjeta_prepago">Tarjeta</string>
    <string name="precio">Precio</string>
    <string name="msg_venta_tarjeta_saldo_insuficiente">No tiene saldo suficiente para realizar esta venta</string>
    <string name="msg_venta_tarjeta_exitoso">La venta se realizó en forma exitosa</string>
    <string name="msg_venta_tarjeta_auditoria">Se realizó venta para el cliente %s con la tarjeta %s</string>
    <string name="leer_codigo_qr">Leer Código QR</string>
    <string name="no_camera_permission">Es necesario que permita el acceso a la cámara para leer el código QR</string>
    <string name="ok">Aceptar</string>
    <string name="low_storage_error">Las dependencias del detector facial no se pueden descargar debido al bajo almacenamiento del dispositivo</string>
    <string name="qrcode_invalido">No se reconoce el código QR</string>
    <string name="hora_inicial">Hora inicial</string>
    <string name="hora_final">Hora final</string>
    <string name="total">Total</string>
    <string name="pagar">Pagar</string>
    <string name="nombre">Nombre</string>
    <string name="transaccion_offline">Esta transacción se realizará fuera de línea</string>

    <string name="action_archive">Archivar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_refresh">Actualizar</string>
</resources>
